fix: mobile chrome nav gap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3699,16 +3699,16 @@ html:has(.drawer-toggle:checked) {
   height: 1.75rem;
 }
 
-.h-\[calc\(100svh-4rem\)\] {
-  height: calc(100svh - 4rem);
+.h-\[calc\(100vh-4rem\)\] {
+  height: calc(100vh - 4rem);
 }
 
 .h-screen {
   height: 100vh;
 }
 
-.min-h-\[calc\(100svh-4rem\)\] {
-  min-height: calc(100svh - 4rem);
+.min-h-\[calc\(100vh-4rem\)\] {
+  min-height: calc(100vh - 4rem);
 }
 
 .min-h-fit {
@@ -4147,8 +4147,8 @@ html:has(.drawer-toggle:checked) {
     display: none;
   }
 
-  .lg\:h-\[calc\(100svh-4rem\)\] {
-    height: calc(100svh - 4rem);
+  .lg\:h-\[calc\(100vh-4rem\)\] {
+    height: calc(100vh - 4rem);
   }
 
   .lg\:h-fit {
